--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="jp.techacademy.wakabayashi.kojiro.mvpchallenge01">
 
     <application
+        android:name=".MvpTask"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -17,6 +18,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".Main2Activity">
+        </activity>
+        <activity android:name=".tasks.TaskActivity">
+        </activity>
+        <activity android:name=".addedittask.AddEditTaskActivity">
         </activity>
     </application>
 
